File Name: CHANGES

10/12/2014 FASP 1.6.1:
- Fix MUMPS link problem due to system directory and pthread in Ubuntu.
- Add Schwarz smoothers: C version.
- Add input parameter for Schwarz block solver type.
- Add a new shell for compare regression results.
- Add CMK and Reversed CMK ordering. 
- Remove unused variables in Schwarz method.
- Fix possible problems (uninitialized and unused variables).
- Fix wrong data type in MUMPS interface. 
- Fix VS10 problems for the new version.
- Update webpage and documentation.

10/06/2014 FASP 1.6.0:
- Update website and documentation.
- Fix a bug with MUMPS in VS2010 setting. 
- Modify debug information in MUMPS interface.
- Test FASP in the new Pangolin and fix several minor bugs.
- Fix VS2010 DEBUG mode bug.
- Fix a problem in test/main/test_bsr.c.
- Test regression_mm.c and record output in mm.out.
- Test regression_mf.c and record output in mf.out.
- Add a safty step for coarse correction scaling.
- Update FASP tutorial, make Fortran version gives same results as C version.
- Update Doxygen, webpage and TCL.
- Fix MUMPS dependence check for cmake.

09/24/2014 FASP 1.5.9:
- Update PGMRES code. 
- Add new regression tests and update regression results. 
- Add upper limit for GMRES restarting number.
- Change default max number of levels back to 20.
- Check AMG coarse levels: decay ratio, density, min DOF. 
- Resolve multiple warnings in *.c files.
- Remove an unnecessary step: setting residual initial value.
- Fix missing variables for UMFPACK.
- Fix a potential problem in CMAKE when finding UMFPACK.
- Update Poisson FEM/FDM test results in out/poisson.out.
- Update TODO list.
- Modify Makefile and separate debug=yes and debug=all (all with FASP debug info).

09/22/2014 FASP 1.5.8:
- Update documentation and webpage.
- Regression test for fasp4blkoil due to a bug for setting parameters.
- Modify warning print level: less important warnings requires level>PRINT_MIN.
- Modify error print level and exit output.