@@ -11,7 +11,7 @@ set(OPENMP 0 BOOL "Openmp use")
 
 # Search for C compilers in the specified order. That will determine
 # the rest.
-	find_program(THE_C NAMES gcc gcc-mp-4.9 gcc-mp-4.8 gcc-mp-4.6 gcc46 gcc45 gcc44 gcc43 icc clang)
+	find_program(THE_C NAMES CC gcc gcc-mp-4.9 gcc-mp-4.8 gcc-mp-4.6 gcc46 gcc45 gcc44 icc clang)
 #
 	if( ${THE_C} MATCHES "gcc.*" )
 		string(REPLACE "gcc" "g++" C_XX ${THE_C} )
@@ -20,9 +20,9 @@ set(OPENMP 0 BOOL "Openmp use")
 ## for a version of cmake < 2.8 add standard libs for gcc, because
 ## they are not automatically added.
 		if( ${CMAKE_VERSION} VERSION_LESS 2.8)
-	           set(ADD_STDLIBS "m" "gfortran")
+	        set(ADD_STDLIBS "m" "gfortran")
 		else(${CMAKE_VERSION} VERSION_LESS 2.8)
-		   set(ADD_STDLIBS "" CACHE STRING "not adding standard libraries ")
+		    set(ADD_STDLIBS "" CACHE STRING "not adding standard libraries ")
 		endif(${CMAKE_VERSION} VERSION_LESS 2.8)
 
     elseif( ${THE_C} MATCHES "icc" )                    
@@ -37,7 +37,7 @@ set(OPENMP 0 BOOL "Openmp use")
  		set(THE_C "0")	      
     endif( ${THE_C} MATCHES "gcc.*" ) 
 #
-	if(  THE_C AND C_XX AND F_C )
+	if( THE_C AND C_XX AND F_C )
 	     find_program(THE_CXX ${C_XX} )
 	     find_program(THE_F ${F_C} )
 	     if( THE_F AND THE_CXX ) 
@@ -45,5 +45,5 @@ set(OPENMP 0 BOOL "Openmp use")
 	    	 set(CMAKE_CXX_COMPILER ${THE_CXX} CACHE INTERNAL   "the C++ compiler" FORCE)
              set(CMAKE_Fortran_COMPILER ${THE_F} CACHE INTERNAL    "the F compiler" FORCE)
 	     endif( THE_F AND THE_CXX ) 
-	endif(  THE_C AND C_XX AND F_C )
+	endif( THE_C AND C_XX AND F_C )
 # END COMPILERS SET UP................ 
